@@ -6,6 +6,7 @@ Made by 'Crafted_Mods' or 'The_Ranger_Malvegil'
  + Added version checker support
  
  * Moved the function getVersion from RecipeHandler to RecipeHandlerCacheManager
+ * Fixed that the item cache sometimes did corrupt some recipes
  
  - Removed the resource loading functions from RecipeHandler and RecipeHandlerFactory
  - Removed a version checker related function from RecipeHandler
